--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Train the Trainers - Crick Partnership & DAIM 2025
+title: Train the Trainers 2025 Crick Partnership DAIM 
 description: Train the Trainers workshop in bioimage analysis - Crick Partnership & DAIM 2025
 show_downloads: true
 google_analytics:
